# gpt2

./: LICENSE  README.md  build.py  fineweb.py  model.py  pyproject.toml  train.py
data/: fineweb.py  fineweb_edu.py
eval/: hellaswag.py  mmlu.py
eval/datasets/: make_hellaswag.py
