[project]
name = "gpt2"
version = "1.0"
description = "a minimal gpt 2 implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.3.5",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]
